<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="corp.poopapps.geometracalculadora.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:layout_margin="0dp"
        android:weightSum="2">

        <TableRow
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="172dp"
                android:layout_height="156dp"
                android:src="@drawable/cuadrado"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="172dp"
                android:layout_height="156dp"
                android:src="@drawable/circulo"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="156dp"
                android:src="@drawable/triangulo"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="187dp"
                android:layout_height="156dp"
                android:src="@drawable/cubo"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:background="@color/gold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/cuadrado"
                    android:text="@string/cuadrado"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/circulo"
                    android:text="@string/circulo"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/triangulo"
                    android:text="@string/triangulo"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/cubo"
                    android:text="@string/cubo"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:weightSum="6"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Evalor1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/Evalor2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:visibility="invisible" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_weight="1"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/Tvalor1"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <TextView
        android:layout_weight="1"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/Tvalor2"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <TextView
        android:layout_weight="1"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/Tvalor3"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>


</LinearLayout>


            <Button
                android:id="@+id/bCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="onButtonClicked"
                android:text="@string/calcular"
                android:textStyle="bold" />

        </LinearLayout>





    </LinearLayout>





</LinearLayout>
